cuda加速的实现

--- a/mandelbrot/.vscode/settings.json
+++ b/mandelbrot/.vscode/settings.json
@@ -67,6 +67,7 @@
         "typeinfo": "cpp",
         "variant": "cpp",
         "format": "cpp",
-        "__nullptr": "cpp"
+        "__nullptr": "cpp",
+        "ios": "cpp"
     }
 }
