--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,10 @@
 *.d
 
 # Compiled Object files
-#*.slo
-#*.lo
-#*.o
-#*.obj
+*.slo
+*.lo
+*.o
+*.obj
 
 # Precompiled Headers
 *.gch
@@ -28,7 +28,7 @@
 *.lib
 
 # Executables
-#*.exe
+*.exe
 *.out
 *.app
 
